# DSLRecommendationSystem

./: .pre-commit-config.yaml  README.md  pyproject.toml
api/src/: database.py  main.py
api/src/models/: dsls.py
dataset/: analyzed_repos.json  analyzed_repos_2026-03-27_17-51-38.json  analyzed_repos_enriched.json  dsl_models_found.json  dsl_models_found_2026-03-27_19-24-24.json  latest.json
docs/: architecture.md  dsl-data-model.md
mining-pipeline/: repo_cache.json  test_gemini.py
mining-pipeline/cache/: repos_seen.json
mining-pipeline/dataset/: _partial.json  analyzed_repos_2026-04-10_15-30-50.json  analyzed_repos_2026-04-26_19-49-07.json  analyzed_repos_enriched.json  analyzed_repos_enriched_2026-04-26_20-28-25.json  analyzed_repos_enriched_2026-04-26_20-35-51.json  analyzed_repos_enriched_2026-04-26_20-38-26.json  analyzed_repos_enriched_2026-04-26_20-57-00.json  dsl_models_found_2026-04-10_16-07-43.json  dsl_models_found_2026-04-10_17-37-52.json  dsl_models_found_2026-04-10_17-53-51.json  dsl_models_found_2026-04-26_19-28-09.json  dsl_models_found_2026-04-26_19-39-57.json  dsl_models_found_2026-04-26_19-48-29.json  latest.json  repos_seen-ii.json  repos_seen.json
mining-pipeline/mining-pipeline/cache/: repos_seen.json
mining-pipeline/src/: config.py  github_scraper.py  logger.py  rass_formater.py  readme_analyzer.py  repo_analyzer.py
